fix(components): Accordion button alignment and line-height issue

--- a/assets/styles/@tcds/components/accordion.scss
+++ b/assets/styles/@tcds/components/accordion.scss
@@ -30,8 +30,9 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    text-align: left;
     gap: space("tight");
-    line-height: 2.5;
+    padding: space("tight") 0;
     font-family: font-stack("ui");
     width: 100%;
 
